--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css">
+  <script src="login.js"></script>
+</head>
+<script src="login.js"></script>
+<body>
+  <div class="wrapper">
+    <div class="modal">
+      <span class="emoji">👀</span>
+      <h1>Anmelden</h1>
+      <p>Ich muss wissen ob du es wirklich bist</p>
+      <div class="form__group">
+        <input type="password" class="form__input" id="name" placeholder="passwort" required="" />
+        <label for="name" class="form__label">Passwort eingeben</label>
+      </div>
+      <a class="modal-btn" onclick="load_home();">LOGIN</a>
+    </div>
+</div>
+</body>
+</html>
