--- a/kino.html
+++ b/kino.html
@@ -19,7 +19,7 @@
             <input type="text" class="form__input" id="name" placeholder="dd/mm" required="" />
             <label for="name" class="form__label">Beliebiges Datum</label>
           </div>
-          <a href="main.html" class="modal-btn">Mich benachrichtigen</a>
+          <a onclick="kino_send()" class="modal-btn">Mich benachrichtigen</a>
         </div>
     </div>
 </body>
