--- a/main.html
+++ b/main.html
@@ -32,6 +32,14 @@
       <p>Ich wollte sowieso mal mit dir ins kino</p>
       <a onclick="test('kino')" class="modal-btn" id="kino_btn">Gutschein einlösen</a>
     </div>  
-</div>
+  </div>
+  <div class="wrapper" id="film">
+    <div class="modal">
+      <span class="emoji">📺</span>
+      <h1>Film-Marathon</h1>
+      <p>Film/Serien Marathon deiner Wahl mit ganz viel Ben&Jerry's</p>
+      <a onclick="test('film')" class="modal-btn" id="film_btn">Gutschein einlösen</a>
+    </div>  
+  </div>
 </body>
 </html>
