--- a/film.html
+++ b/film.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styledate.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-<body>
+<body onload="start()">
     <div class="wrapper">
         <div class="modal">
           <span class="emoji">🌹</span>
