--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="login.js"></script>
 </head>
 <script src="login.js"></script>
-<body>
+<body onload="start()">
   <div class="wrapper">
     <div class="modal">
       <span class="emoji">👀</span>
