--- a/main.html
+++ b/main.html
@@ -8,38 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet" />
-
 </head>
 <script src="script.js"></script>
-<body onload="hide()">
+<script src="server.js"></script>
+<body>
   <header>
     <div class="head">
       <p>Gutscheinsammlung von Lena</p>
     </div>
   </header>
-  <div class="wrapper" id="kochen">
-      <div class="modal">
-        <span class="emoji">🍔</span>
-        <h1>Ich koche für dich</h1>
-        <p>Eine Mahlzeit die ich ganz alleine für dich Koche :) <br> gerne auch vegetarisch 🥦</p>
-        <a class="modal-btn" onclick="test('kochen')" id="kochen_btn" >Gutschein einlösen</a>
-      </div>  
+  <div class="container" id="container">
+    <div class="wrapper" id="template">
+        <div class="modal">
+          <span class="emoji" id="emoji">//🍔\\</span>
+          <h1 class="head">lorem454</h1>
+          <p class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est repellendus doloremque, voluptatibus corporis veritatis omnis tempore nisi quidem animi architecto.</p>  
+
+          <a class="modal-btn" id="btn" >Gutschein einlösen</a>
+        </div>  
+    </div> 
+    
   </div>
-  <div class="wrapper" id="kino">
-    <div class="modal">
-      <span class="emoji">📽️</span>
-      <h1>Kino zusammen</h1>
-      <p>Ich wollte sowieso mal mit dir ins kino</p>
-      <a onclick="test('kino')" class="modal-btn" id="kino_btn">Gutschein einlösen</a>
-    </div>  
-  </div>
-  <div class="wrapper" id="film">
-    <div class="modal">
-      <span class="emoji">📺</span>
-      <h1>Film-Marathon</h1>
-      <p>Film/Serien Marathon deiner Wahl mit ganz viel Ben&Jerry's</p>
-      <a onclick="test('film')" class="modal-btn" id="film_btn">Gutschein einlösen</a>
-    </div>  
-  </div>
+  <a class="modal-btn" id="admin_btn" style="background-color: gray;" onclick="load_admin()">__Admin Panel__</a>
 </body>
 </html>
